--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                                                 <div class="nouveau"><p>Nouveau</p></div>
                                                         </a>
                                         </div>
-                                        <article class="vignette_menu">
+                                        <div class="vignette_menu">
                                                 <a href="menu_2.html">
                                                         <img src="Image/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
                                                         <div>
@@ -91,8 +91,8 @@
                                                         </div>
                                                         <div class="nouveau"><p>Nouveau</p></div> 
                                                 </a>
-                                        </article>
-                                        <article class="vignette_menu">
+                                        </div>
+                                        <div class="vignette_menu">
                                                 <a href="menu_3.html">
                                                         <img src="Image/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
                                                         <div>
@@ -104,8 +104,8 @@
                                                                 <i class="fas fa-heart"></i>
                                                         </div>
                                                 </a>
-                                        </article>
-                                        <article class="vignette_menu">
+                                        </div>
+                                        <div class="vignette_menu">
                                                 <a href="menu_4.html">
                                                         <img src="Image/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
                                                         <div>
@@ -117,7 +117,7 @@
                                                                 <i class="fas fa-heart"></i>
                                                         </div>
                                                 </a>
-                                        </article>
+                                        </div>
                                 </div>
                         </section>
                 </main>
